--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 markdown: kramdown
+remote_theme: pages-themes/architect@v0.2.0
 plugins:
+  - jekyll-remote-theme
   - jekyll-relative-links
 relative_links:
   enabled: true
