--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,7 @@
-markdown: kramdown
-remote_theme: pages-themes/cayman@v0.2.0
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-remote-theme
   - jekyll-relative-links
 relative_links:
   enabled: true
   collections: true
-include:
-  - README.md
-  - LICENSE.md
