chore: Update navigation

--- a/_data/nav.yaml
+++ b/_data/nav.yaml
@@ -70,7 +70,7 @@ software-development:
           title: Version control
           index: index
           subnav:
-            01-github: GitHub
+            github: GitHub
         zsh:
           title: Zsh
           index: zsh
