--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -125,6 +125,9 @@ items:
               - title: GitHub
                 website: https://github.com
                 path: github
+                items:
+                  - title: SSH
+                    path: ssh
           - title: Zsh
             website: https://www.zsh.org
             path: zsh
