--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -40,6 +40,7 @@ items:
           - title: Partitions
             path: partitions
       - title: Linux
+        website: https://www.linux.org
         path: linux
         items:
           - title: Android
