--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -112,6 +112,7 @@ items:
             items:
               - title: Checkout UI
                 website: https://shopify.dev/docs/api/checkout-ui-extensions
+                path: checkout-ui
                 items:
                   - title: Configuration
                     path: configuration
