--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -45,6 +45,7 @@ items:
           - title: Partitions
             path: partitions
       - title: TypeScript
+        path: typescript
         items:
           - title: Best practices (AWS)
             website: https://docs.aws.amazon.com/prescriptive-guidance/latest/best-practices-cdk-typescript-iac/typescript-best-practices.html
