--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -130,8 +130,10 @@ items:
             website: https://www.typescriptlang.org
             path: typescript
             items:
-              - title: Best practices (AWS)
+              - title: Best practices by AWS
                 website: https://docs.aws.amazon.com/prescriptive-guidance/latest/best-practices-cdk-typescript-iac/typescript-best-practices.html
+              - title: Bun
+                website: https://bun.sh
       - title: Linux
         website: https://www.linux.org
         path: linux
