--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -201,6 +201,15 @@ items:
       - title: Quality
         path: quality
         items:
+          - title: Patterns
+            path: patterns
+            items:
+              - title: Domain-driven design
+                website: https://martinfowler.com/bliki/DomainDrivenDesign.html
+                path: ddd
+                items:
+                  - title: Ubiquitous language
+                    website: https://martinfowler.com/bliki/UbiquitousLanguage.html
           - title: Tests
             path: tests
             items:
