--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -230,9 +230,6 @@ items:
             items:
               - title: git
                 path: git
-                items:
-                  title: Semantic Versioning
-                  website: https://semver.org
               - title: GitButler
                 website: https://gitbutler.com
               - title: GitHub
@@ -241,6 +238,8 @@ items:
                 items:
                   - title: SSH
                     path: ssh
+              - title: Semantic Versioning
+                website: https://semver.org
           - title: Zsh
             website: https://www.zsh.org
             path: zsh
